Getting the Find Enemy and Attack buttons working on the home interface.
